# twig-server

./: .env.dev.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose-debug.yml  docker-compose-production.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pvc-inspector.yaml  pyproject.toml  server.py  twig-auth-service.yaml  twig-config-kratos.yaml  twig-flask-service.yaml  twig-ingress.yaml  twig-postgres-demo.yaml  twig-pv.yaml  twig-pvc.yaml  twig-sqlite-migration.yaml  twig-sqlite.yaml  twig-traefik-dashboard.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
bash_scripts/: neo4j_install_labels.sh
caddy/: Caddyfile
containers/flask/: Dockerfile
containers/keto/: data.json  docker-compose.yml  instructions.md
containers/kratos/: kratos.yml
containers/oathkeeper/: Dockerfile  config.yaml  jwks.json  rules.json
containers/traefik/: rules.json
docs/: CONTRIBUTING.md  common-pitfalls.md  ide_setup.md  paths.md  useful_commands.md
helm-twigslot/: Chart.yaml  README.md  custom-values.yaml  values.yaml
helm-twigslot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  ingressroutes.yaml  service.yaml  serviceaccount.yaml
kubernetes/: instructions.md
kubernetes/auth/: oathkeeper.yaml  twig-auth-service.yaml
kubernetes/autofill/: autofill-service.yaml  (+1 more)
tests/: conftest.py  test_database_Resource.py  test_database_User.py  test_database_connection.py  test_database_project.py  test_database_resource.py  test_database_schemas.py  test_database_user.py  test_orm_and_models.py  test_twig_server.py
tools/: create_dummy_data.py  create_dummy_users.py  datamodels.py  dev_tools.py  dummy_data.py  network_functions.py
twig_server/: app.py  neo4j.py
(+79 files in other folders)
