[tool.poetry]
name = "twig-server"
version = "0.1.0"
license = "GNU-AGPLv3"
readme = "README.md"
description = "Server backing TWIG"
authors = ["TWIGSLOT Team <twigslot@tchlabs.net>"]

[tool.poetry.dependencies]
python = "^3.9.9"
Flask = "^2.2.2"
neo4j = "^4.4.5"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
pytest-dotenv = "^0.5.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
